@@ -18,6 +18,7 @@
 package stroom.explorer.impl;
 
 import stroom.collection.api.CollectionService;
+import stroom.docref.DocContentHighlights;
 import stroom.docref.DocContentMatch;
 import stroom.docref.DocRef;
 import stroom.explorer.api.ExplorerActionHandler;
@@ -28,30 +29,49 @@ import stroom.explorer.api.ExplorerService;
 import stroom.explorer.shared.BulkActionResult;
 import stroom.explorer.shared.DocumentType;
 import stroom.explorer.shared.ExplorerConstants;
-import stroom.explorer.shared.ExplorerDocContentMatch;
+import stroom.explorer.shared.ExplorerFields;
 import stroom.explorer.shared.ExplorerNode;
-import stroom.explorer.shared.ExplorerNode.NodeState;
+import stroom.explorer.shared.ExplorerNode.Builder;
 import stroom.explorer.shared.ExplorerNodeKey;
+import stroom.explorer.shared.ExplorerResource.TagFetchMode;
 import stroom.explorer.shared.ExplorerTreeFilter;
 import stroom.explorer.shared.FetchExplorerNodeResult;
-import stroom.explorer.shared.FindExplorerNodeCriteria;
-import stroom.explorer.shared.FindExplorerNodeQuery;
+import stroom.explorer.shared.FetchExplorerNodesRequest;
+import stroom.explorer.shared.FetchHighlightsRequest;
+import stroom.explorer.shared.FindInContentRequest;
+import stroom.explorer.shared.FindInContentResult;
+import stroom.explorer.shared.FindRequest;
+import stroom.explorer.shared.FindResult;
+import stroom.explorer.shared.NodeFlag;
+import stroom.explorer.shared.NodeFlag.NodeFlagGroups;
 import stroom.explorer.shared.PermissionInheritance;
-import stroom.explorer.shared.StandardTagNames;
+import stroom.explorer.shared.StandardExplorerTags;
+import stroom.query.shared.FetchSuggestionsRequest;
+import stroom.query.shared.Suggestions;
 import stroom.security.api.SecurityContext;
 import stroom.security.shared.DocumentPermissionNames;
+import stroom.suggestions.api.SuggestionsQueryHandler;
 import stroom.svg.shared.SvgImage;
-import stroom.util.filter.FilterFieldMapper;
-import stroom.util.filter.FilterFieldMappers;
-import stroom.util.filter.QuickFilterPredicateFactory;
+import stroom.util.NullSafe;
+import stroom.util.entityevent.EntityAction;
+import stroom.util.entityevent.EntityEvent;
+import stroom.util.entityevent.EntityEventBus;
+import stroom.util.logging.DurationTimer;
+import stroom.util.logging.LambdaLogger;
+import stroom.util.logging.LambdaLoggerFactory;
+import stroom.util.logging.LogUtil;
+import stroom.util.logging.Metrics;
+import stroom.util.logging.Metrics.LocalMetrics;
 import stroom.util.shared.Clearable;
 import stroom.util.shared.PageRequest;
 import stroom.util.shared.PermissionException;
 import stroom.util.shared.ResultPage;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import jakarta.inject.Inject;
+import jakarta.inject.Provider;
+import jakarta.inject.Singleton;
 
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -64,21 +84,20 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Predicate;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import javax.inject.Inject;
-import javax.inject.Provider;
-import javax.inject.Singleton;
 
 @Singleton
-class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearable {
+class ExplorerServiceImpl
+        implements ExplorerService, CollectionService, Clearable, SuggestionsQueryHandler {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(ExplorerServiceImpl.class);
+    private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(ExplorerServiceImpl.class);
 
-    private static final FilterFieldMappers<DocRef> FIELD_MAPPERS = FilterFieldMappers.of(
-            FilterFieldMapper.of(ExplorerTreeFilter.FIELD_DEF_NAME, DocRef::getName),
-            FilterFieldMapper.of(ExplorerTreeFilter.FIELD_DEF_TYPE, DocRef::getType),
-            FilterFieldMapper.of(ExplorerTreeFilter.FIELD_DEF_UUID, DocRef::getUuid));
+    private static final Set<String> FOLDER_TYPES = Set.of(
+            ExplorerConstants.SYSTEM,
+            ExplorerConstants.FAVOURITES,
+            ExplorerConstants.FOLDER);
 
     private final ExplorerNodeService explorerNodeService;
     private final ExplorerTreeModel explorerTreeModel;
@@ -87,6 +106,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     private final ExplorerEventLog explorerEventLog;
     private final Provider<ExplorerDecorator> explorerDecoratorProvider;
     private final Provider<ExplorerFavService> explorerFavService;
+    private final EntityEventBus entityEventBus;
 
     @Inject
     ExplorerServiceImpl(final ExplorerNodeService explorerNodeService,
@@ -95,7 +115,8 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                         final SecurityContext securityContext,
                         final ExplorerEventLog explorerEventLog,
                         final Provider<ExplorerDecorator> explorerDecoratorProvider,
-                        final Provider<ExplorerFavService> explorerFavService) {
+                        final Provider<ExplorerFavService> explorerFavService,
+                        final EntityEventBus entityEventBus) {
         this.explorerNodeService = explorerNodeService;
         this.explorerTreeModel = explorerTreeModel;
         this.explorerActionHandlers = explorerActionHandlers;
@@ -103,114 +124,227 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         this.explorerEventLog = explorerEventLog;
         this.explorerDecoratorProvider = explorerDecoratorProvider;
         this.explorerFavService = explorerFavService;
+        this.entityEventBus = entityEventBus;
 
         explorerNodeService.ensureRootNodeExists();
     }
 
     @Override
-    public FetchExplorerNodeResult getData(final FindExplorerNodeCriteria criteria) {
+    public FetchExplorerNodeResult getData(final FetchExplorerNodesRequest criteria) {
+        final DurationTimer timer = DurationTimer.start();
+        final LocalMetrics metrics = Metrics.createLocalMetrics(LOGGER.isDebugEnabled());
         try {
-            List<ExplorerNode> rootNodes;
-            List<ExplorerNodeKey> openedItems = new ArrayList<>();
-            Set<ExplorerNodeKey> temporaryOpenItems;
+            if (LOGGER.isDebugEnabled()) {
+                logOpenItems(
+                        OpenItemsImpl.create(criteria.getOpenItems()),
+                        OpenItemsImpl.create(criteria.getTemporaryOpenedItems()),
+                        OpenItemsImpl.create(criteria.getEnsureVisible()));
+            }
 
-            final ExplorerTreeFilter filter = criteria.getFilter();
-            final String qualifiedFilterInput = QuickFilterPredicateFactory.fullyQualifyInput(
-                    filter.getNameFilter(), FIELD_MAPPERS);
-
-            // Get the master tree model.
-            final TreeModel masterTreeModel = explorerTreeModel.getModel().clone();
-
-            // Generate a hashset of all favourites for the user, so we can mark matching nodes with a star
-            final Set<String> userFavourites = explorerFavService.get().getUserFavourites()
-                    .stream()
-                    .map(DocRef::getUuid)
-                    .collect(Collectors.toSet());
-            buildFavouritesNode(masterTreeModel);
-
+            // Get a copy of the master tree model, so we can add the favourites into it.
+            final TreeModel masterTreeModelClone = explorerTreeModel.getModel().createMutableCopy();
             // See if we need to open any more folders to see nodes we want to ensure are visible.
-            final Set<ExplorerNodeKey> forcedOpenItems = getForcedOpenItems(masterTreeModel, criteria);
+            final Set<ExplorerNodeKey> forcedOpenItems = getForcedOpenItems(masterTreeModelClone, criteria);
 
-            final Set<ExplorerNodeKey> allOpenItems = new HashSet<>();
-            allOpenItems.addAll(criteria.getOpenItems());
-            allOpenItems.addAll(criteria.getTemporaryOpenedItems());
-            allOpenItems.addAll(forcedOpenItems);
-
-            final FilteredTreeModel filteredModel = new FilteredTreeModel(
-                    masterTreeModel.getId(),
-                    masterTreeModel.getCreationTime());
-            // Create the predicate for the current filter value
-            final Predicate<DocRef> fuzzyMatchPredicate = QuickFilterPredicateFactory.createFuzzyMatchPredicate(
-                    filter.getNameFilter(), FIELD_MAPPERS);
-
-            addDescendants(
-                    null,
-                    null,
-                    masterTreeModel,
-                    filteredModel,
-                    filter,
-                    fuzzyMatchPredicate,
-                    false,
-                    allOpenItems,
-                    userFavourites,
-                    0);
-
-            // Sort the tree model
-            filteredModel.sort(this::getPriority);
-
-            // If the name filter has changed then we want to temporarily expand all nodes.
-            if (filter.isNameFilterChange()) {
-                if (filter.getNameFilter() == null) {
-                    temporaryOpenItems = new HashSet<>();
-                } else {
-                    temporaryOpenItems = new HashSet<>(filteredModel.getAllParents());
-                }
-
-                rootNodes = addRoots(
-                        filteredModel,
-                        criteria.getOpenItems(),
-                        forcedOpenItems,
-                        temporaryOpenItems,
-                        openedItems);
-            } else {
-                temporaryOpenItems = null;
-
-                rootNodes = addRoots(
-                        filteredModel,
-                        criteria.getOpenItems(),
-                        forcedOpenItems,
-                        criteria.getTemporaryOpenedItems(),
-                        openedItems);
+            final Set<ExplorerNodeKey> allOpen = new HashSet<>();
+            allOpen.addAll(NullSafe.set(criteria.getOpenItems()));
+            allOpen.addAll(NullSafe.set(criteria.getTemporaryOpenedItems()));
+            allOpen.addAll(NullSafe.set(forcedOpenItems));
+            final OpenItems openItems = OpenItemsImpl.createWithForced(allOpen, forcedOpenItems);
+            final FetchExplorerNodeResult result = getData(
+                    criteria.getFilter(),
+                    masterTreeModelClone,
+                    openItems,
+                    metrics,
+                    criteria.getShowAlerts());
+            if (LOGGER.isDebugEnabled()) {
+                LOGGER.debug("getData() metrics:\n{}", LogUtil.toPaddedMultiLine("  ", metrics.toString()));
+                logResult(LOGGER::debug, criteria, result, timer.get());
             }
+            return result;
 
-            rootNodes = decorateTree(
-                    criteria,
-                    rootNodes,
-                    fuzzyMatchPredicate);
-
-            // Ensure root nodes are open if they have items
-            for (final ExplorerNode rootNode : rootNodes) {
-                if (rootNode.getChildren() != null
-                        && !rootNode.getChildren().isEmpty()
-                        && NodeState.CLOSED.equals(rootNode.getNodeState())) {
-
-                    rootNodes = rootNodes
-                            .stream()
-                            .map(node -> {
-                                if (node == rootNode) {
-                                    return node.copy().nodeState(NodeState.OPEN).build();
-                                }
-                                return node;
-                            })
-                            .collect(Collectors.toList());
-                }
-            }
-
-            return new FetchExplorerNodeResult(rootNodes, openedItems, temporaryOpenItems, qualifiedFilterInput);
         } catch (Exception e) {
             LOGGER.error("Error fetching nodes with criteria {}", criteria, e);
             throw e;
         }
+    }
+
+    private FetchExplorerNodeResult getData(final ExplorerTreeFilter filter,
+                                            final TreeModel masterTreeModelClone,
+                                            final OpenItems openItems,
+                                            final LocalMetrics metrics,
+                                            final boolean includeNodeInfo) {
+        // Generate a hashset of all favourites for the user, so we can mark matching nodes with a star
+        final Set<String> userFavouriteUuids = explorerFavService.get().getUserFavourites()
+                .stream()
+                .map(DocRef::getUuid)
+                .collect(Collectors.toSet());
+        buildFavouritesNode(masterTreeModelClone);
+
+        final FilteredTreeModel filteredModel = new FilteredTreeModel(
+                masterTreeModelClone.getId(),
+                masterTreeModelClone.getCreationTime());
+
+        // A transient holder for the filter, predicate
+        final NodeInclusionChecker nodeInclusionChecker = new NodeInclusionChecker(securityContext, filter);
+
+        // Recurse down the tree adding items that should be included
+        final NodeStates nodeStates = addDescendants(
+                null,
+                null,
+                masterTreeModelClone,
+                filteredModel,
+                filter,
+                nodeInclusionChecker,
+                false,
+                openItems,
+                userFavouriteUuids,
+                0,
+                includeNodeInfo,
+                metrics);
+
+        // Sort the tree model
+        filteredModel.sort(this::getPriority);
+
+        // If the name filter has changed then we want to temporarily expand all nodes.
+        Set<ExplorerNodeKey> temporaryOpenItems;
+        if (filter.isNameFilterChange()) {
+            if (NullSafe.isBlankString(filter.getNameFilter()) || nodeStates.openNodes.isEmpty()) {
+                temporaryOpenItems = Collections.emptySet();
+            } else {
+                temporaryOpenItems = new HashSet<>(nodeStates.openNodes);
+                openItems.addAll(nodeStates.openNodes);
+            }
+        } else {
+            temporaryOpenItems = null;
+        }
+
+        List<ExplorerNodeKey> openedItems = new ArrayList<>();
+        List<ExplorerNode> rootNodes = addRoots(
+                filteredModel,
+                openItems,
+                openedItems,
+                metrics);
+
+        rootNodes = decorateTree(
+                rootNodes,
+                filter,
+                nodeInclusionChecker);
+
+        rootNodes = ensureRootNodes(rootNodes, filter);
+
+        if (LOGGER.isTraceEnabled()) {
+            logOpenItems(
+                    OpenItemsImpl.create(openedItems),
+                    OpenItemsImpl.create(temporaryOpenItems),
+                    null);
+        }
+
+        return new FetchExplorerNodeResult(
+                rootNodes, openedItems, temporaryOpenItems, nodeInclusionChecker.getQualifiedNameFilterInput());
+    }
+
+    private void logResult(final Consumer<String> loggerFunc,
+                           final FetchExplorerNodesRequest criteria,
+                           final FetchExplorerNodeResult result,
+                           final Duration duration) {
+        final ExplorerTreeFilter filter = criteria.getFilter();
+        final String template = """
+                Returned FetchExplorerNodeResult in {}
+                  user: {}
+                  minDepth: {}
+                  includedTypes: {}
+                  includedTags: {}
+                  requiredPermissions: {}
+                  filterInput: '{}'
+                  qualifiedFilterInput: '{}'
+                  criteria open item count: {}
+                  criteria temp open item count: {}
+                  criteria ensure visible count: {}
+                  result open item count: {}
+                  result temp open item count: {}
+                """;
+        loggerFunc.accept(LogUtil.message(
+                template,
+                duration,
+                securityContext.getUserIdentityForAudit(),
+                criteria.getMinDepth(),
+                filter.getIncludedTypes(),
+                filter.getTags(),
+                filter.getRequiredPermissions(),
+                Objects.requireNonNullElse(filter.getNameFilter(), ""),
+                Objects.requireNonNullElse(result.getQualifiedFilterInput(), ""),
+                NullSafe.size(criteria.getOpenItems()),
+                NullSafe.size(criteria.getTemporaryOpenedItems()),
+                NullSafe.size(criteria.getEnsureVisible()),
+                NullSafe.size(result.getOpenedItems()),
+                NullSafe.size(result.getTemporaryOpenedItems())));
+    }
+
+    private static void logOpenItems(final OpenItems openItems,
+                                     final OpenItems tempOpenItems,
+                                     final OpenItems ensureVisible) {
+        if (NullSafe.hasItems(openItems)) {
+            LOGGER.trace(() -> LogUtil.message("openItems:\n{}", openItems));
+        }
+        if (NullSafe.hasItems(tempOpenItems)) {
+            LOGGER.trace(() -> LogUtil.message("tempOpenItems:\n{}", openItems));
+        }
+        if (NullSafe.hasItems(ensureVisible)) {
+            LOGGER.trace(() -> LogUtil.message("ensureVisible:\n{}", openItems));
+        }
+    }
+
+    private static List<ExplorerNode> ensureRootNodes(final List<ExplorerNode> rootNodes,
+                                                      final ExplorerTreeFilter filter) {
+        // Now ensure we always have favourite system root nodes
+        final List<ExplorerNode> rootNodesCopy = new ArrayList<>(rootNodes);
+        final List<ExplorerNode> result = new ArrayList<>();
+        ExplorerNode favouritesNode = ensureRootNode(rootNodesCopy, filter, ExplorerConstants.FAVOURITES_NODE);
+
+        // We can't use the tree model to work out if the fav node has descendant issues or not
+        // so we have to just check its direct children
+        final boolean foundNodeInfo = NullSafe.stream(favouritesNode.getChildren())
+                .anyMatch(ExplorerNode::hasDescendantNodeInfo);
+        favouritesNode = favouritesNode.copy()
+                .setNodeFlag(NodeFlag.DESCENDANT_NODE_INFO, foundNodeInfo)
+                .build();
+
+        result.add(favouritesNode);
+        result.add(ensureRootNode(rootNodesCopy, filter, ExplorerConstants.SYSTEM_NODE));
+        // Add any remaining nodes, e.g. searchables
+        result.addAll(rootNodesCopy);
+        return result;
+    }
+
+    private static ExplorerNode ensureRootNode(final List<ExplorerNode> nodes,
+                                               final ExplorerTreeFilter filter,
+                                               final ExplorerNode rootNodeConstant) {
+
+        // We may have no nodes under Favourites/System so ensure they are always present.
+        // If a quick filter is active then mark them as non-matches.
+        return removeMatchingNode(nodes, rootNodeConstant)
+                .orElseGet(() ->
+                        rootNodeConstant.copy()
+                                .addNodeFlag(NodeFlag.LEAF)
+                                .setGroupedNodeFlag(
+                                        NodeFlagGroups.FILTER_MATCH_PAIR,
+                                        NullSafe.isBlankString(filter.getNameFilter()))
+                                .build());
+    }
+
+    private static Optional<ExplorerNode> removeMatchingNode(final List<ExplorerNode> nodes,
+                                                             final ExplorerNode targetNode) {
+        List<ExplorerNode> list = NullSafe.list(nodes);
+
+        for (int i = 0; i < list.size(); i++) {
+            final ExplorerNode node = list.get(i);
+            if (Objects.equals(node, targetNode)) {
+                nodes.remove(i);
+                return Optional.of(node);
+            }
+        }
+        return Optional.empty();
     }
 
     private int getPriority(final ExplorerNode node) {
@@ -222,87 +356,82 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         return documentType.getGroup().getPriority();
     }
 
-    private void buildFavouritesNode(final TreeModel masterTreeModel) {
-        final ExplorerNode.Builder favNodeBuilder = ExplorerConstants.FAVOURITES_NODE.copy()
-                .icon(SvgImage.FAVOURITES);
-        final ExplorerNode favNode = favNodeBuilder.build();
-
-        final Map<String, SvgImage> iconMap = getTypes()
-                .stream()
-                .collect(Collectors.toMap(DocumentType::getType, DocumentType::getIcon));
+    private void buildFavouritesNode(final TreeModel treeModel) {
+        final ExplorerNode favRootNode = ExplorerConstants.FAVOURITES_NODE;
+        treeModel.addRoot(favRootNode);
 
         for (final DocRef favDocRef : explorerFavService.get().getUserFavourites()) {
-            final ExplorerNode childNode = favNode.copy()
-                    .docRef(favDocRef)
+            final ExplorerNode treeModelNode = treeModel.getNode(favDocRef.getUuid());
+            final ExplorerNode childNode = treeModelNode.copy()
+                    .rootNodeUuid(favRootNode)
                     .depth(1)
-                    .icon(iconMap.get(favDocRef.getType()))
-                    .isFavourite(true)
-                    .rootNodeUuid(favNode)
-                    .tags(ExplorerTags.getTags(favDocRef.getType()))
+                    .addNodeFlag(NodeFlag.FAVOURITE)
+                    .addNodeFlag(ExplorerFlags.getStandardFlagByDocType(favDocRef.getType()).orElse(null))
                     .build();
-            masterTreeModel.add(favNode, childNode);
+            treeModel.add(favRootNode, childNode);
         }
-
-        masterTreeModel.add(null, favNode);
     }
 
-    private List<ExplorerNode> decorateTree(final FindExplorerNodeCriteria criteria,
-                                            final List<ExplorerNode> rootNodes,
-                                            final Predicate<DocRef> fuzzyMatchPredicate) {
-        if (rootNodes.size() > 0) {
-            final ExplorerNode rootNode = rootNodes.get(rootNodes.size() - 1);
+    private List<ExplorerNode> decorateTree(final List<ExplorerNode> rootNodes,
+                                            final ExplorerTreeFilter filter,
+                                            final NodeInclusionChecker nodeInclusionChecker) {
+        if (!rootNodes.isEmpty()) {
+            final ExplorerNode rootNode = rootNodes.getLast();
             return rootNodes
                     .stream()
                     .map(node -> {
                         if (node == rootNode) {
-                            return replaceRootNode(criteria, node, fuzzyMatchPredicate);
+                            return replaceRootNode(node, filter, nodeInclusionChecker);
                         }
                         return node;
                     })
                     .collect(Collectors.toList());
         } else {
-            return Collections.singletonList(replaceRootNode(criteria, null, fuzzyMatchPredicate));
+            return Collections.singletonList(replaceRootNode(null, filter, nodeInclusionChecker));
         }
     }
 
-    private ExplorerNode replaceRootNode(final FindExplorerNodeCriteria criteria,
-                                         final ExplorerNode rootNode,
-                                         final Predicate<DocRef> fuzzyMatchPredicate) {
-        final ExplorerNode.Builder builder;
+    private ExplorerNode replaceRootNode(final ExplorerNode rootNode,
+                                         final ExplorerTreeFilter filter,
+                                         final NodeInclusionChecker nodeInclusionChecker) {
+        final ExplorerNode.Builder rootNodeBuilder;
         if (rootNode != null) {
-            builder = rootNode.copy();
+            rootNodeBuilder = rootNode.copy();
         } else {
-            builder = explorerNodeService.getNodeWithRoot()
-                    .map(node -> {
-                        final ExplorerNode.Builder root = node.copy();
-                        Optional.ofNullable(explorerActionHandlers.getType(ExplorerConstants.SYSTEM))
-                                .map(DocumentType::getIcon)
-                                .ifPresent(root::icon);
-                        return root;
-                    })
-                    .orElseGet(ExplorerNode::builder);
+            // If there is no root at this point then either the quick filter has filtered
+            // everything out so System is not a match, or it is type filter with no matching types
+            // in which case System would be considered a match as we only have non-matches when
+            // using the QuickFilter
+            rootNodeBuilder = ExplorerConstants.SYSTEM_NODE.copy()
+                    .setGroupedNodeFlag(
+                            NodeFlagGroups.FILTER_MATCH_PAIR,
+                            NullSafe.isBlankString(filter.getNameFilter()));
         }
 
-        if (criteria.getFilter() != null &&
-                criteria.getFilter().getTags() != null &&
-                criteria.getFilter().getTags().contains(StandardTagNames.DATA_SOURCE)) {
+        if (filter != null
+                && NullSafe.set(filter.getNodeFlags()).contains(NodeFlag.DATA_SOURCE)) {
 
             final ExplorerDecorator explorerDecorator = explorerDecoratorProvider.get();
             if (explorerDecorator != null) {
-                final List<DocRef> additionalDocRefs = explorerDecorator.list()
+                // Unfortunately we need to create the nodes before we filter, as we
+                // need to be able to filter on the node's tags
+                final List<ExplorerNode> additionalNodes = explorerDecorator.list()
                         .stream()
-                        .filter(fuzzyMatchPredicate)
+                        .map(this::createSearchableNode)
+                        .filter(nodeInclusionChecker.getFuzzyMatchPredicate())
                         .toList();
 
-                if (!additionalDocRefs.isEmpty()) {
-                    if (rootNode == null) {
-                        throw new RuntimeException("Missing root node");
-                    }
-                    additionalDocRefs.forEach(docRef -> builder.addChild(createSearchableNode(docRef)));
+                if (NullSafe.hasItems(additionalNodes)) {
+                    additionalNodes.forEach(rootNodeBuilder::addChild);
                 }
             }
         }
-        return builder.build();
+        if (rootNode == null || !rootNode.hasNodeFlagGroup(NodeFlagGroups.EXPANDER_GROUP)) {
+            if (!rootNodeBuilder.hasChildren()) {
+                rootNodeBuilder.addNodeFlag(NodeFlag.LEAF);
+            }
+        }
+        return rootNodeBuilder.build();
     }
 
     @Override
@@ -328,8 +457,8 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         return ExplorerNode
                 .builder()
                 .docRef(docRef)
-                .tags(StandardTagNames.DATA_SOURCE)
-                .nodeState(NodeState.LEAF)
+                .addNodeFlag(NodeFlag.DATA_SOURCE)
+                .addNodeFlag(NodeFlag.LEAF)
                 .depth(1)
                 .icon(SvgImage.DOCUMENT_SEARCHABLE)
                 .build();
@@ -346,7 +475,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     }
 
     private Set<DocRef> getDescendants(final DocRef folder, final String type, final int maxDepth) {
-        final TreeModel masterTreeModel = explorerTreeModel.getModel();
+        final UnmodifiableTreeModel masterTreeModel = explorerTreeModel.getModel();
         if (masterTreeModel != null) {
             final Set<DocRef> refs = new HashSet<>();
             addChildren(folder, type, 0, maxDepth, masterTreeModel, refs);
@@ -360,7 +489,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                              final String type,
                              final int depth,
                              final int maxDepth,
-                             final TreeModel treeModel,
+                             final UnmodifiableTreeModel treeModel,
                              final Set<DocRef> refs) {
         final List<DocRef> children = treeModel.getChildren(parent);
         if (children != null) {
@@ -379,11 +508,11 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     }
 
     private Set<ExplorerNodeKey> getForcedOpenItems(final TreeModel masterTreeModel,
-                                                    final FindExplorerNodeCriteria criteria) {
+                                                    final FetchExplorerNodesRequest criteria) {
         final Set<ExplorerNodeKey> forcedOpen = new HashSet<>();
 
-        // Add parents of  nodes that we have been requested to ensure are visible.
-        if (criteria.getEnsureVisible() != null && criteria.getEnsureVisible().size() > 0) {
+        // Add parents of nodes that we have been requested to ensure are visible.
+        if (criteria.getEnsureVisible() != null && !criteria.getEnsureVisible().isEmpty()) {
             for (final ExplorerNodeKey ensureVisible : criteria.getEnsureVisible()) {
                 ExplorerNode parent = masterTreeModel.getParent(ensureVisible.getUuid());
                 while (parent != null) {
@@ -401,6 +530,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         if (criteria.getMinDepth() != null && criteria.getMinDepth() > 0) {
             forceMinDepthOpen(masterTreeModel, forcedOpen, null, null,
                     criteria.getMinDepth(), 1);
+            forcedOpen.add(ExplorerConstants.FAVOURITES_NODE.getUniqueKey());
         }
 
         return forcedOpen;
@@ -433,180 +563,279 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         }
     }
 
-    private boolean addDescendants(final ExplorerNode rootNode,
-                                   final ExplorerNode parent,
-                                   final TreeModel treeModelIn,
-                                   final FilteredTreeModel treeModelOut,
-                                   final ExplorerTreeFilter filter,
-                                   final Predicate<DocRef> filterPredicate,
-                                   final boolean ignoreNameFilter,
-                                   final Set<ExplorerNodeKey> allOpenItems,
-                                   final Set<String> userFavourites,
-                                   final int currentDepth) {
-        int added = 0;
+    private NodeStates addDescendants(final ExplorerNode rootNode,
+                                      final ExplorerNode parent,
+                                      final TreeModel treeModelIn,
+                                      final FilteredTreeModel treeModelOut,
+                                      final ExplorerTreeFilter filter,
+                                      final NodeInclusionChecker nodeInclusionChecker,
+                                      final boolean ignoreNameFilter,
+                                      final OpenItems allOpenItems,
+                                      final Set<String> userFavourites,
+                                      final int currentDepth,
+                                      final boolean includeNodeInfo,
+                                      final LocalMetrics metrics) {
+        return metrics.measure("addDescendants", () -> {
+            int added = 0;
+            boolean foundChildNodeInfo = false;
+            boolean foundFilterMatch = false;
+            final Set<ExplorerNodeKey> openNodes = new HashSet<>();
 
-        final List<ExplorerNode> children = treeModelIn.getChildren(parent);
-        if (children != null) {
-            // Add all children if the name filter has changed or the parent item is open.
-            final boolean addAllChildren = (filter.isNameFilterChange() && filter.getNameFilter() != null)
-                    || parent == null || allOpenItems.contains(parent.getUniqueKey());
+            final List<ExplorerNode> children = treeModelIn.getChildren(parent);
+            if (children != null) {
+                // Add all children if the name filter has changed or the parent item is open.
+                final boolean addAllChildren = (filter.isNameFilterChange() && filter.getNameFilter() != null)
+                        || parent == null
+                        || allOpenItems.isOpen(parent.getUniqueKey());
 
-            // We need to add at least one item to the tree to be able to determine if the parent is a leaf node.
-            final Iterator<ExplorerNode> iterator = children.iterator();
-            while (iterator.hasNext() && (addAllChildren || added == 0)) {
-                final ExplorerNode child = iterator.next();
+                // We need to add at least one item to the tree to be able to determine if the parent is a leaf node.
+                final Iterator<ExplorerNode> iterator = children.iterator();
+                while (iterator.hasNext() && (addAllChildren || added == 0)) {
+                    final ExplorerNode child = iterator.next();
+                    // We don't want to filter child items if the parent folder matches the name filter.
+                    final boolean isFuzzyFilterMatch = nodeInclusionChecker.isFuzzyFilterMatch(child);
+                    final boolean ignoreChildNameFilter = ignoreNameFilter || isFuzzyFilterMatch;
 
-                // Decorate the child with the root parent node, so the same child can be referenced in multiple
-                // parent roots (e.g. System or Favourites)
-                final ExplorerNode childWithParent = child.copy()
-                        .rootNodeUuid(Objects.requireNonNullElse(rootNode, child))
-                        .isFavourite(userFavourites.contains(child.getUuid()))
-                        .build();
+                    // Decorate the child with the root parent node, so the same child can be referenced in multiple
+                    // parent roots (e.g. System or Favourites)
+                    final ExplorerNode.Builder nodeBuilder = child.copy()
+                            .rootNodeUuid(Objects.requireNonNullElse(rootNode, child))
+                            .setNodeFlag(NodeFlag.FAVOURITE, userFavourites.contains(child.getUuid()))
+                            .setGroupedNodeFlag(NodeFlagGroups.FILTER_MATCH_PAIR, isFuzzyFilterMatch);
+                    if (includeNodeInfo) {
+                        nodeBuilder.nodeInfoList(treeModelIn.getNodeInfo(child));
+                    }
 
-                // We don't want to filter child items if the parent folder matches the name filter.
-                final boolean ignoreChildNameFilter = filterPredicate.test(childWithParent.getDocRef());
+                    ExplorerNode decoratedChild = nodeBuilder.build();
 
-                // Recurse right down to find out if a descendant is being added and therefore if we need to
-                // include this as an ancestor.
-                final boolean hasChildren = addDescendants(
-                        Objects.requireNonNullElse(rootNode, childWithParent),
-                        childWithParent,
-                        treeModelIn,
-                        treeModelOut,
-                        filter,
-                        filterPredicate,
-                        ignoreChildNameFilter,
-                        allOpenItems,
-                        userFavourites,
-                        currentDepth + 1);
-                if (hasChildren) {
-                    treeModelOut.add(parent, childWithParent);
-                    added++;
-                } else if (checkType(childWithParent, filter.getIncludedTypes())
-                        && checkTags(childWithParent, filter.getTags())
-                        && (ignoreNameFilter || filterPredicate.test(childWithParent.getDocRef()))
-                        && checkSecurity(childWithParent, filter.getRequiredPermissions())) {
-                    treeModelOut.add(parent, childWithParent);
-                    added++;
+                    // Recurse right down to find out if a descendant is being added and therefore if we need to
+                    // include this as an ancestor.
+                    final NodeStates result = addDescendants(
+                            Objects.requireNonNullElse(rootNode, decoratedChild),
+                            decoratedChild,
+                            treeModelIn,
+                            treeModelOut,
+                            filter,
+                            nodeInclusionChecker,
+                            ignoreChildNameFilter,
+                            allOpenItems,
+                            userFavourites,
+                            currentDepth + 1,
+                            includeNodeInfo,
+                            metrics);
+
+                    openNodes.addAll(result.openNodes);
+                    final Builder builder = decoratedChild.copy()
+                            .setNodeFlag(NodeFlag.FOLDER, result.isFolder);
+
+                    if (includeNodeInfo && result.hasIssues && result.isFolder) {
+                        // Mark the node as having descendants with issues
+                        builder.addNodeFlag(NodeFlag.DESCENDANT_NODE_INFO);
+                    }
+                    decoratedChild = builder.build();
+
+                    if (result.isFolder && result.containsFilterMatch) {
+                        openNodes.add(decoratedChild.getUniqueKey());
+                    }
+                    if (isFuzzyFilterMatch || result.containsFilterMatch) {
+                        foundFilterMatch = true;
+                    }
+
+                    // See if child should be included in treeModelOut
+                    if (isNodeIncluded(result.hasChildren, ignoreNameFilter, nodeInclusionChecker, child, metrics)) {
+                        treeModelOut.add(parent, decoratedChild);
+                        added++;
+                        if (includeNodeInfo) {
+                            if (result.hasIssues || hasDescendantNodeInfo(
+                                    treeModelIn,
+                                    nodeInclusionChecker,
+                                    ignoreNameFilter,
+                                    parent,
+                                    Collections.singleton(child),
+                                    metrics)) {
+                                foundChildNodeInfo = true;
+                            }
+                        }
+                    }
+                }
+
+                // The above loop may not look at all children so check the remaining
+                // children to establish if any included nodes have issues
+                if (includeNodeInfo && !foundChildNodeInfo && !addAllChildren) {
+                    final Set<ExplorerNode> remainingIncludedChildNodes = new HashSet<>();
+                    iterator.forEachRemaining(remainingIncludedChildNodes::add);
+
+                    if (hasDescendantNodeInfo(
+                            treeModelIn,
+                            nodeInclusionChecker,
+                            ignoreNameFilter,
+                            parent,
+                            remainingIncludedChildNodes,
+                            metrics)) {
+                        foundChildNodeInfo = true;
+                    }
                 }
             }
-        }
-
-        return added > 0;
+            return new NodeStates(
+                    added > 0,
+                    foundChildNodeInfo,
+                    isFolder(parent),
+                    foundFilterMatch,
+                    openNodes);
+        });
     }
 
-    private boolean checkSecurity(final ExplorerNode explorerNode, final Set<String> requiredPermissions) {
-        if (requiredPermissions == null || requiredPermissions.size() == 0) {
-            return false;
-        }
-
-        final String uuid = explorerNode.getDocRef().getUuid();
-        for (final String permission : requiredPermissions) {
-            if (!securityContext.hasDocumentPermission(uuid, permission)) {
+    private boolean isFolder(final ExplorerNode explorerNode) {
+        if (explorerNode != null) {
+            final String type = NullSafe.get(explorerNode.getDocRef(), DocRef::getType);
+            if (type != null) {
+                return FOLDER_TYPES.contains(type);
+            } else {
                 return false;
             }
+        } else {
+            return false;
         }
-
-        return true;
     }
 
-    static boolean checkType(final ExplorerNode explorerNode, final Set<String> types) {
-        return types == null || types.contains(explorerNode.getType());
-    }
+    /**
+     * @return True if any one of childNodes (or their descendants) has node info and is included
+     * in treeModelOut
+     */
+    private boolean hasDescendantNodeInfo(final TreeModel treeModelIn,
+                                          final NodeInclusionChecker nodeInclusionChecker,
+                                          final boolean ignoreNameFilter,
+                                          final ExplorerNode parentNode,
+                                          final Collection<ExplorerNode> childNodes,
+                                          final LocalMetrics metrics) {
 
-    static boolean checkTags(final ExplorerNode explorerNode, final Set<String> tags) {
-        if (tags == null) {
-            return true;
-        } else if (explorerNode.getTags() != null && explorerNode.getTags().length() > 0 && tags.size() > 0) {
-            for (final String tag : tags) {
-                if (explorerNode.getTags().contains(tag)) {
-                    return true;
+        return metrics.measure("hasDescendantNodeInfo", () -> {
+            // See if any of childNodes (or their descendants) have node info in the master model
+            boolean hasDescendantNodeInfo = false;
+            final Set<ExplorerNode> childrenWithDescendantInfo = treeModelIn.getChildrenWithDescendantInfo(
+                    parentNode, childNodes);
+
+            if (NullSafe.hasItems(childrenWithDescendantInfo)) {
+                // At least one descendant has node info, but there may be filter/perms limiting what
+                // the user can see, or they are in un-opened branches, so we need to walk the full tree
+                // to check based on what we can see
+                for (final ExplorerNode childNode : childrenWithDescendantInfo) {
+                    final boolean isNodeIncluded = metrics.measure("isNodeIncluded", () ->
+                            nodeInclusionChecker.isNodeIncluded(ignoreNameFilter, childNode));
+                    if (isNodeIncluded) {
+                        // This child is included in the filtering and is known to have descendant node info,
+                        // so we can mark as found and bail out of this level
+                        hasDescendantNodeInfo = true;
+                        break;
+                    } else {
+                        // Not included but its children might be so recurse those nodes known
+                        // to have descendant node info
+                        final Set<ExplorerNode> grandChildren = treeModelIn.getChildrenWithDescendantInfo(
+                                childNode);
+                        if (NullSafe.hasItems(grandChildren)) {
+                            hasDescendantNodeInfo = hasDescendantNodeInfo(
+                                    treeModelIn,
+                                    nodeInclusionChecker,
+                                    ignoreNameFilter,
+                                    childNode,
+                                    grandChildren,
+                                    metrics);
+                        }
+                    }
+                    if (hasDescendantNodeInfo) {
+                        break;
+                    }
                 }
             }
-        }
+            return hasDescendantNodeInfo;
+        });
+    }
 
-        return false;
+    private boolean isNodeIncluded(final boolean hasChildren,
+                                   final boolean ignoreNameFilter,
+                                   final NodeInclusionChecker nodeInclusionChecker,
+                                   final ExplorerNode child,
+                                   final LocalMetrics metrics) {
+        return metrics.measure("isNodeIncluded (hasChildren)", () ->
+                hasChildren
+                        || nodeInclusionChecker.isNodeIncluded(ignoreNameFilter, child));
     }
 
     private List<ExplorerNode> addRoots(final FilteredTreeModel filteredModel,
-                                        final Set<ExplorerNodeKey> openItems,
-                                        final Set<ExplorerNodeKey> forcedOpenItems,
-                                        final Set<ExplorerNodeKey> temporaryOpenItems,
-                                        final List<ExplorerNodeKey> openedItems) {
-        final List<ExplorerNode> rootNodes = new ArrayList<>();
-        final List<ExplorerNode> children = filteredModel.getChildren(null);
+                                        final OpenItems openItems,
+                                        final List<ExplorerNodeKey> openedItems,
+                                        final LocalMetrics metrics) {
+        return metrics.measure("addRoots", () -> {
+            final List<ExplorerNode> rootNodes = new ArrayList<>();
+            final List<ExplorerNode> children = filteredModel.getChildren(null);
 
-        if (children != null) {
-            final List<ExplorerNode> sortedChildren = children
-                    .stream()
-                    .sorted(Comparator.comparing(ExplorerNode::getName))
-                    .toList();
-            for (final ExplorerNode child : sortedChildren) {
-                final ExplorerNode copy =
-                        addChildren(
-                                child,
-                                child,
-                                filteredModel,
-                                openItems,
-                                forcedOpenItems,
-                                temporaryOpenItems,
-                                0,
-                                openedItems);
-                rootNodes.add(copy);
+            if (children != null) {
+                final List<ExplorerNode> sortedChildren = children
+                        .stream()
+                        .sorted(Comparator.comparing(ExplorerNode::getName))
+                        .toList();
+                for (final ExplorerNode child : sortedChildren) {
+                    final ExplorerNode copy =
+                            addChildren(
+                                    child,
+                                    child,
+                                    filteredModel,
+                                    openItems,
+                                    0,
+                                    openedItems,
+                                    metrics);
+                    rootNodes.add(copy);
+                }
             }
-        }
-        return rootNodes;
+            return rootNodes;
+        });
     }
 
     private ExplorerNode addChildren(final ExplorerNode rootNode,
                                      final ExplorerNode parent,
                                      final FilteredTreeModel filteredModel,
-                                     final Set<ExplorerNodeKey> openItems,
-                                     final Set<ExplorerNodeKey> forcedOpenItems,
-                                     final Set<ExplorerNodeKey> temporaryOpenItems,
+                                     final OpenItems openItems,
                                      final int currentDepth,
-                                     final List<ExplorerNodeKey> openedItems) {
-        ExplorerNode.Builder builder = parent.copy();
-        builder.depth(currentDepth);
+                                     final List<ExplorerNodeKey> openedItems,
+                                     final LocalMetrics metrics) {
+        return metrics.measure("addChildren", () -> {
+            ExplorerNode.Builder builder = parent.copy();
+            builder.depth(currentDepth);
 
-        final ExplorerNodeKey parentNodeKey = parent.getUniqueKey();
+            final ExplorerNodeKey parentNodeKey = parent.getUniqueKey();
 
-        // See if we need to force this item open.
-        boolean force = false;
-        if (forcedOpenItems.contains(parentNodeKey)) {
-            force = true;
-            openedItems.add(parentNodeKey);
-        } else if (temporaryOpenItems != null && temporaryOpenItems.contains(parentNodeKey)) {
-            force = true;
-        }
-
-        final List<ExplorerNode> children = filteredModel.getChildren(parent);
-        if (children == null) {
-            builder.nodeState(NodeState.LEAF);
-        } else if (force || openItems.contains(parentNodeKey)) {
-            final List<ExplorerNode> newChildren = new ArrayList<>();
-            for (final ExplorerNode child : children) {
-                final ExplorerNode copy = addChildren(
-                        rootNode,
-                        child,
-                        filteredModel,
-                        openItems,
-                        forcedOpenItems,
-                        temporaryOpenItems,
-                        currentDepth + 1,
-                        openedItems);
-                newChildren.add(copy);
+            // Remember if this item was forced open. This allows us to filter down the items that were actually opened
+            // in the filtered tree as a result of forcing.
+            if (openItems.isForcedOpen(parentNodeKey)) {
+                openedItems.add(parentNodeKey);
             }
 
-            builder.nodeState(NodeState.OPEN);
-            builder.children(newChildren);
-            builder.rootNodeUuid(rootNode);
+            final List<ExplorerNode> children = filteredModel.getChildren(parent);
+            if (!parent.hasNodeFlagGroup(NodeFlagGroups.EXPANDER_GROUP) && NullSafe.isEmptyCollection(children)) {
+                builder.setGroupedNodeFlag(NodeFlagGroups.EXPANDER_GROUP, NodeFlag.LEAF);
+            } else if (openItems.isOpen(parentNodeKey)) {
+                final List<ExplorerNode> newChildren = new ArrayList<>();
+                for (final ExplorerNode child : NullSafe.list(children)) {
+                    final ExplorerNode copy = addChildren(
+                            rootNode,
+                            child,
+                            filteredModel,
+                            openItems,
+                            currentDepth + 1,
+                            openedItems,
+                            metrics);
+                    newChildren.add(copy);
+                }
 
-        } else {
-            builder.nodeState(NodeState.CLOSED);
-        }
+                builder.setGroupedNodeFlag(NodeFlagGroups.EXPANDER_GROUP, NodeFlag.OPEN);
+                builder.children(newChildren);
+                builder.rootNodeUuid(rootNode);
+            } else {
+                builder.setGroupedNodeFlag(NodeFlagGroups.EXPANDER_GROUP, NodeFlag.CLOSED);
+            }
 
-        return builder.build();
+            return builder.build();
+        });
     }
 
     @Override
@@ -614,6 +843,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                                final String name,
                                final ExplorerNode destinationFolder,
                                final PermissionInheritance permissionInheritance) {
+
         final DocRef folderRef = getDestinationFolderRef(destinationFolder);
         final ExplorerActionHandler handler = explorerActionHandlers.getHandler(type);
 
@@ -624,6 +854,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             // Check that the user is allowed to create an item of this type in the destination folder.
             checkCreatePermission(getUUID(folderRef), type);
             // Create an item of the specified type in the destination folder.
+            // This should fire a CREATE entity event
             result = handler.createDocument(name);
             explorerEventLog.create(type, name, result.getUuid(), folderRef, permissionInheritance, null);
         } catch (final RuntimeException e) {
@@ -655,7 +886,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             return destinationFolder.getDocRef();
         }
 
-        final ExplorerNode rootNode = explorerNodeService.getNodeWithRoot().orElse(null);
+        final ExplorerNode rootNode = explorerNodeService.getRoot();
         return rootNode != null
                 ? rootNode.getDocRef()
                 : null;
@@ -664,6 +895,8 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     @Override
     public BulkActionResult copy(final List<ExplorerNode> explorerNodes,
                                  final ExplorerNode destinationFolder,
+                                 final boolean allowRename,
+                                 final String docName,
                                  final PermissionInheritance permissionInheritance) {
         final StringBuilder resultMessage = new StringBuilder();
 
@@ -678,6 +911,8 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         explorerNodes.forEach(sourceNode -> copy(
                 sourceNode,
                 destinationFolder,
+                allowRename,
+                docName,
                 permissionInheritance,
                 resultMessage,
                 remappings));
@@ -703,7 +938,11 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         });
 
         // Make sure the tree model is rebuilt.
-        rebuildTree();
+        remappings.values().forEach(newNode -> {
+            // Although the copy above will have fired entity events, they were before the deps
+            // get re-mapped. Thus, we need to let the exp tree know that deps may have changed
+            EntityEvent.fire(entityEventBus, newNode.getDocRef(), EntityAction.CREATE_EXPLORER_NODE);
+        });
 
         return new BulkActionResult(new ArrayList<>(remappings.values()), resultMessage.toString());
     }
@@ -719,6 +958,8 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
      */
     private void copy(final ExplorerNode sourceNode,
                       final ExplorerNode destinationFolder,
+                      final boolean allowRename,
+                      final String docName,
                       final PermissionInheritance permissionInheritance,
                       final StringBuilder resultMessage,
                       final Map<ExplorerNode, ExplorerNode> remappings) {
@@ -743,7 +984,14 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                         .collect(Collectors.toSet());
 
                 // Copy the item to the destination folder.
-                final DocRef destinationDocRef = handler.copyDocument(sourceNode.getDocRef(),
+                String name = sourceNode.getDocRef().getName();
+                if (allowRename && docName != null && !docName.trim().isEmpty()) {
+                    name = docName;
+                }
+                final DocRef destinationDocRef = handler.copyDocument(
+                        sourceNode.getDocRef(),
+                        name,
+                        !allowRename,
                         otherDestinationChildrenNames);
                 explorerEventLog.copy(sourceNode.getDocRef(), destinationFolderRef, permissionInheritance,
                         null);
@@ -793,9 +1041,9 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         final ExplorerNode destinationFolder = remappings.get(sourceFolder);
         if (destinationFolder != null) {
             final List<ExplorerNode> children = childMap.get(sourceFolder);
-            if (children != null && children.size() > 0) {
+            if (children != null && !children.isEmpty()) {
                 children.forEach(child -> {
-                    copy(child, destinationFolder, permissionInheritance, resultMessage, remappings);
+                    copy(child, destinationFolder, false, null, permissionInheritance, resultMessage, remappings);
                     recurseCopy(child, permissionInheritance, resultMessage, remappings, childMap);
                 });
             }
@@ -809,7 +1057,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                                 final Map<ExplorerNode, List<ExplorerNode>> childMap) {
         explorerNodes.forEach(explorerNode -> {
             final List<ExplorerNode> children = explorerNodeService.getChildren(explorerNode.getDocRef());
-            if (children != null && children.size() > 0) {
+            if (children != null && !children.isEmpty()) {
                 childMap.put(explorerNode, children);
                 createChildMap(children, childMap);
             }
@@ -859,10 +1107,9 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             if (result != null) {
                 explorerNodeService.moveNode(result, folderRef, permissionInheritance);
             }
+            // Let the tree know it has changed
+            EntityEvent.fire(entityEventBus, explorerNode.getDocRef(), result, EntityAction.UPDATE_EXPLORER_NODE);
         }
-
-        // Make sure the tree model is rebuilt.
-        rebuildTree();
 
         return new BulkActionResult(resultNodes, resultMessage.toString());
     }
@@ -873,9 +1120,72 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         final ExplorerNode result = rename(handler, explorerNode, docName);
 
         // Make sure the tree model is rebuilt.
-        rebuildTree();
+        EntityEvent.fire(entityEventBus, result.getDocRef(), EntityAction.UPDATE_EXPLORER_NODE);
 
         return result;
+    }
+
+    @Override
+    public ExplorerNode updateTags(final ExplorerNode explorerNode) {
+        Objects.requireNonNull(explorerNode);
+        final DocRef docRef = explorerNode.getDocRef();
+        return updateTags(docRef, explorerNode.getTags());
+    }
+
+    public ExplorerNode updateTags(final DocRef docRef, final Set<String> tags) {
+        Objects.requireNonNull(docRef);
+        ExplorerNode beforeNode = null;
+        ExplorerNode afterNode = null;
+        try {
+            beforeNode = explorerNodeService.getNode(docRef)
+                    .orElse(null);
+
+            explorerNodeService.updateTags(docRef, tags);
+
+            afterNode = explorerNodeService.getNode(docRef)
+                    .orElseThrow(() -> new RuntimeException(LogUtil.message(
+                            "Can't find node {} after updating it", docRef)));
+
+            explorerEventLog.update(beforeNode, afterNode, null);
+
+            // Make sure the tree model is rebuilt.
+            EntityEvent.fire(entityEventBus, docRef, EntityAction.UPDATE_EXPLORER_NODE);
+            return afterNode;
+        } catch (final Exception e) {
+            explorerEventLog.update(beforeNode, afterNode, e);
+            throw e;
+        }
+    }
+
+    @Override
+    public void addTags(final List<DocRef> docRefs, final Set<String> tags) {
+        addRemoveTags(docRefs, tags, TagOperation.ADD);
+    }
+
+    @Override
+    public void removeTags(final List<DocRef> docRefs, final Set<String> tags) {
+        addRemoveTags(docRefs, tags, TagOperation.REMOVE);
+    }
+
+    private void addRemoveTags(final List<DocRef> docRefs,
+                               final Set<String> tags,
+                               final TagOperation tagOperation) {
+
+        if (NullSafe.hasItems(tags)) {
+            for (final DocRef docRef : NullSafe.list(docRefs)) {
+
+                explorerNodeService.getNode(docRef).ifPresent(node -> {
+                    final Set<String> nodeTags = new HashSet<>(NullSafe.set(node.getTags()));
+                    if (TagOperation.ADD.equals(tagOperation)) {
+                        nodeTags.addAll(tags);
+                    } else {
+                        nodeTags.removeAll(tags);
+                    }
+
+                    updateTags(docRef, nodeTags);
+                });
+            }
+        }
     }
 
     private ExplorerNode rename(final ExplorerActionHandler handler,
@@ -893,6 +1203,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
 
         // Rename the explorer node.
         explorerNodeService.renameNode(result);
+        EntityEvent.fire(entityEventBus, result, EntityAction.UPDATE_EXPLORER_NODE);
 
         return ExplorerNode.builder()
                 .docRef(result)
@@ -902,21 +1213,25 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
 
     @Override
     public BulkActionResult delete(final List<ExplorerNode> explorerNodes) {
-        final List<ExplorerNode> resultDocRefs = new ArrayList<>();
+        final List<ExplorerNode> resultNodes = new ArrayList<>();
         final StringBuilder resultMessage = new StringBuilder();
 
         final HashSet<ExplorerNode> deleted = new HashSet<>();
         explorerNodes.forEach(explorerNode -> {
             // Check this document hasn't already been deleted.
             if (!deleted.contains(explorerNode)) {
-                recursiveDelete(explorerNodes, deleted, resultDocRefs, resultMessage);
+                recursiveDelete(explorerNodes, deleted, resultNodes, resultMessage);
             }
         });
 
-        // Make sure the tree model is rebuilt.
-        rebuildTree();
+        // The action handlers may fire DELETE events, but in case they don't
+        resultNodes.stream()
+                .filter(Objects::nonNull)
+                .map(ExplorerNode::getDocRef)
+                .forEach(docRef ->
+                        EntityEvent.fire(entityEventBus, docRef, EntityAction.DELETE_EXPLORER_NODE));
 
-        return new BulkActionResult(resultDocRefs, resultMessage.toString());
+        return new BulkActionResult(resultNodes, resultMessage.toString());
     }
 
     private void recursiveDelete(final List<ExplorerNode> explorerNodes,
@@ -928,14 +1243,14 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             if (!deleted.contains(explorerNode)) {
                 // Get any children that might need to be deleted.
                 List<ExplorerNode> children = explorerNodeService.getChildren(explorerNode.getDocRef());
-                if (children != null && children.size() > 0) {
+                if (children != null && !children.isEmpty()) {
                     // Recursive delete.
                     recursiveDelete(children, deleted, resultDocRefs, resultMessage);
                 }
 
                 // Check to see if we still have children.
                 children = explorerNodeService.getChildren(explorerNode.getDocRef());
-                if (children != null && children.size() > 0) {
+                if (children != null && !children.isEmpty()) {
                     final String message = "Unable to delete '" + explorerNode.getName() +
                             "' because the folder is not empty";
                     resultMessage.append(message);
@@ -982,9 +1297,67 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     }
 
     @Override
+    public Set<String> getTags() {
+        final Set<String> modelTags = NullSafe.set(explorerTreeModel.getModel().getAllTags());
+        final int count = StandardExplorerTags.values().length + modelTags.size();
+        final Set<String> tags = new HashSet<>(count);
+
+        // Add in our standard tags
+        for (final StandardExplorerTags tag : StandardExplorerTags.values()) {
+            tags.add(tag.getTagName());
+        }
+
+        // Add in all known tags from the exp tree model, i.e. user added ones
+        tags.addAll(modelTags);
+        return Collections.unmodifiableSet(tags);
+    }
+
+    @Override
+    public Set<String> getTags(final Collection<DocRef> docRefs, final TagFetchMode fetchMode) {
+
+        if (NullSafe.hasItems(docRefs)) {
+            final UnmodifiableTreeModel treeModel = explorerTreeModel.getModel();
+            if (TagFetchMode.OR.equals(fetchMode) || docRefs.size() == 1) {
+                return NullSafe.stream(docRefs)
+                        .filter(Objects::nonNull)
+                        .map(docRef ->
+                                treeModel.getNode(docRef.getUuid()))
+                        .filter(Objects::nonNull)
+                        .flatMap(node ->
+                                NullSafe.stream(node.getTags()))
+                        .collect(Collectors.toUnmodifiableSet());
+            } else {
+                // Find the tags common to ALL nodes
+                Set<String> commonTags = null;
+                for (final DocRef docRef : docRefs) {
+                    if (docRef != null) {
+                        final ExplorerNode node = treeModel.getNode(docRef.getUuid());
+                        final Set<String> nodeTags = new HashSet<>(NullSafe.getOrElseGet(
+                                node,
+                                ExplorerNode::getTags,
+                                Collections::emptySet));
+                        if (nodeTags.isEmpty()) {
+                            // A node has no tags so no common tags
+                            commonTags = nodeTags;
+                            break;
+                        }
+                        if (commonTags != null) {
+                            nodeTags.retainAll(commonTags);
+                        }
+                        commonTags = nodeTags;
+                    }
+                }
+                return Collections.unmodifiableSet(NullSafe.set(commonTags));
+            }
+        } else {
+            return Collections.emptySet();
+        }
+    }
+
+    @Override
     public List<DocumentType> getVisibleTypes() {
         // Get the master tree model.
-        final TreeModel masterTreeModel = explorerTreeModel.getModel();
+        final UnmodifiableTreeModel masterTreeModel = explorerTreeModel.getModel();
 
         // Filter the model by user permissions.
         final Set<String> requiredPermissions = new HashSet<>();
@@ -997,7 +1370,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
     }
 
     private boolean addTypes(final ExplorerNode parent,
-                             final TreeModel treeModel,
+                             final UnmodifiableTreeModel treeModel,
                              final Set<String> types,
                              final Set<String> requiredPermissions) {
         boolean added = false;
@@ -1007,12 +1380,17 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             for (final ExplorerNode child : children) {
                 // Recurse right down to find out if a descendant is being added and therefore if we need to
                 // include this type as it is an ancestor.
+                // Even if you have no permission on a folder, you can see descendants of it if you have permission
+                // on them, hence we have to recurse all the way.
                 final boolean hasChildren = addTypes(child, treeModel, types, requiredPermissions);
+                final String type = child.getType();
                 if (hasChildren) {
-                    types.add(child.getType());
+                    // We added one or more descendants of child, so add child's type
+                    types.add(type);
                     added = true;
-                } else if (checkSecurity(child, requiredPermissions)) {
-                    types.add(child.getType());
+                } else if (!types.contains(type)
+                        && NodeInclusionChecker.hasPermission(securityContext, child, requiredPermissions)) {
+                    types.add(type);
                     added = true;
                 }
             }
@@ -1037,31 +1415,111 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
         // Only allow administrators to create documents with no folder.
         if (folderUUID == null) {
             if (!securityContext.isAdmin()) {
-                throw new PermissionException(securityContext.getUserId(),
+                throw new PermissionException(securityContext.getUserIdentityForAudit(),
                         "Only administrators can create root level entries");
             }
         } else {
             if (!securityContext.hasDocumentPermission(folderUUID,
                     DocumentPermissionNames.getDocumentCreatePermission(type))) {
-                throw new PermissionException(securityContext.getUserId(),
+                throw new PermissionException(securityContext.getUserIdentityForAudit(),
                         "You do not have permission to create (" + type + ") in folder " + folderUUID);
             }
         }
     }
 
     @Override
-    public ResultPage<ExplorerDocContentMatch> findContent(final FindExplorerNodeQuery request) {
-        final List<ExplorerDocContentMatch> list = new ArrayList<>();
+    public ResultPage<FindResult> find(final FindRequest request) {
+        final LocalMetrics metrics = Metrics.createLocalMetrics(LOGGER.isDebugEnabled());
+        try {
+            if (request.getFilter() == null) {
+                return ResultPage.empty();
+            }
+            final boolean recentItemsMode = request.getFilter().getRecentItems() != null;
+            if (recentItemsMode) {
+                if (request.getFilter().getRecentItems().isEmpty()) {
+                    return ResultPage.empty();
+                }
+            } else if (NullSafe.isBlankString(request.getFilter().getNameFilter())) {
+                return ResultPage.empty();
+            }
+
+            // Get a copy of the master tree model, so we can add the favourites into it.
+            final TreeModel masterTreeModelClone = explorerTreeModel.getModel().createMutableCopy();
+
+            final FetchExplorerNodeResult result = getData(
+                    request.getFilter(),
+                    masterTreeModelClone,
+                    OpenItemsImpl.all(),
+                    metrics,
+                    false);
+            final List<FindResult> results = new ArrayList<>();
+            addResults("", result.getRootNodes(), results);
+
+            // If this is recent items mode then filter by recent items.
+            if (recentItemsMode) {
+                final Map<DocRef, FindResult> resultMap = results
+                        .stream()
+                        .filter(findResult ->
+                                !ExplorerConstants.FAVOURITES_NODE.getName().equals(findResult.getPath()))
+                        .collect(Collectors.toMap(FindResult::getDocRef, Function.identity()));
+                final List<FindResult> recentItems = request
+                        .getFilter().getRecentItems()
+                        .stream()
+                        .map(resultMap::get)
+                        .filter(Objects::nonNull)
+                        .toList();
+                return ResultPage.createPageLimitedList(recentItems, request.getPageRequest());
+            } else {
+                results.sort(Comparator
+                        .<FindResult, String>comparing(res -> res.getDocRef().getName(), Comparator.naturalOrder())
+                        .thenComparing(FindResult::getPath)
+                        .thenComparing(res -> res.getDocRef().getType())
+                        .thenComparing(res -> res.getDocRef().getUuid()));
+            }
+
+            return ResultPage.createPageLimitedList(results, request.getPageRequest());
+
+        } catch (Exception e) {
+            LOGGER.error("Error finding nodes with request {}", request, e);
+            throw e;
+        }
+    }
+
+    private void addResults(final String parent,
+                            final List<ExplorerNode> nodes,
+                            final List<FindResult> results) {
+        if (nodes != null) {
+            for (final ExplorerNode node : nodes) {
+                if (node.hasNodeFlag(NodeFlag.FILTER_MATCH) &&
+                        node.getDocRef() != null &&
+                        !Objects.equals(ExplorerConstants.SYSTEM, node.getType()) &&
+                        !Objects.equals(ExplorerConstants.FAVOURITES, node.getType())) {
+                    results.add(new FindResult(
+                            node.getDocRef(),
+                            parent,
+                            node.getIcon()));
+                }
+                addResults(
+                        parent.isEmpty()
+                                ? node.getName()
+                                : parent + " / " + node.getName(),
+                        node.getChildren(),
+                        results);
+            }
+        }
+    }
+
+    @Override
+    public ResultPage<FindInContentResult> findInContent(final FindInContentRequest request) {
+        final List<FindInContentResult> list = new ArrayList<>();
         for (final DocumentType documentType : explorerActionHandlers.getTypes()) {
             final ExplorerActionHandler explorerActionHandler =
                     explorerActionHandlers.getHandler(documentType.getType());
-            final List<DocContentMatch> matches = explorerActionHandler
-                    .findByContent(request.getPattern(), request.isRegex(), request.isMatchCase());
-
+            final List<DocContentMatch> matches = explorerActionHandler.findByContent(request.getFilter());
             for (final DocContentMatch docContentMatch : matches) {
                 final List<String> parents = new ArrayList<>();
                 parents.add(docContentMatch.getDocRef().getName());
-                final TreeModel masterTreeModel = explorerTreeModel.getModel();
+                final UnmodifiableTreeModel masterTreeModel = explorerTreeModel.getModel();
                 if (masterTreeModel != null) {
                     ExplorerNode parent = masterTreeModel.getParent(ExplorerNode
                             .builder()
@@ -1081,7 +1539,7 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
                     }
                 }
 
-                final ExplorerDocContentMatch explorerDocContentMatch = ExplorerDocContentMatch.builder()
+                final FindInContentResult explorerDocContentMatch = FindInContentResult.builder()
                         .docContentMatch(docContentMatch)
                         .path(parentPath.toString())
                         .icon(explorerActionHandler.getDocumentType().getIcon())
@@ -1090,10 +1548,63 @@ class ExplorerServiceImpl implements ExplorerService, CollectionService, Clearab
             }
         }
 
-        PageRequest pageRequest = request.getPageRequest();
-        if (list.size() < pageRequest.getOffset()) {
-            return ResultPage.createUnboundedList(Collections.emptyList());
-        }
+        final PageRequest pageRequest = request.getPageRequest();
         return ResultPage.createPageLimitedList(list, pageRequest);
+    }
+
+    @Override
+    public DocContentHighlights fetchHighlights(final FetchHighlightsRequest request) {
+        final ExplorerActionHandler explorerActionHandler =
+                explorerActionHandlers.getHandler(request.getDocRef().getType());
+        return explorerActionHandler.fetchHighlights(request.getDocRef(), request.getExtension(), request.getFilter());
+    }
+
+    @Override
+    public Set<String> parseNodeTags(final String tagsStr) {
+        return NodeTagSerialiser.deserialise(tagsStr);
+    }
+
+    @Override
+    public String nodeTagsToString(final Set<String> tags) {
+        return NodeTagSerialiser.serialise(tags);
+    }
+
+    @Override
+    public Suggestions getSuggestions(final FetchSuggestionsRequest request) {
+        return securityContext.secureResult(() -> {
+            if (ExplorerFields.TAG.getName().equals(request.getField().getFieldName())) {
+                final Set<String> tags = getTags();
+                return new Suggestions(new ArrayList<>(tags), false);
+            } else {
+                throw new RuntimeException(LogUtil.message("Unexpected field " + request.getField().getFieldName()));
+            }
+        });
+    }
+
+    // --------------------------------------------------------------------------------
+
+
+    /**
+     * @param hasChildren         Whether this node has any children that are to be included in the tree.
+     * @param hasIssues           Whether this node or any of its descendants have an issue.
+     * @param isFolder            Whether this node is a folder, i.e. has children that may or may not be included
+     *                            in the tree.
+     * @param containsFilterMatch Whether this node or any descendant is a filter match.
+     */
+    private record NodeStates(boolean hasChildren,
+                              boolean hasIssues,
+                              boolean isFolder,
+                              boolean containsFilterMatch,
+                              Set<ExplorerNodeKey> openNodes) {
+
+    }
+
+
+    // --------------------------------------------------------------------------------
+
+
+    private enum TagOperation {
+        ADD,
+        REMOVE
     }
 }
