@@ -23,7 +23,11 @@ import stroom.index.shared.IndexException;
 import stroom.index.shared.IndexShard;
 import stroom.index.shared.IndexShard.IndexShardStatus;
 import stroom.index.shared.IndexShardKey;
+import stroom.index.shared.LuceneVersion;
+import stroom.index.shared.LuceneVersionUtil;
 import stroom.node.api.NodeInfo;
+import stroom.search.extraction.IndexStructure;
+import stroom.search.extraction.IndexStructureCache;
 import stroom.security.api.SecurityContext;
 import stroom.task.api.TaskContextFactory;
 import stroom.task.api.TerminateHandlerFactory;
@@ -33,9 +37,13 @@ import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.shared.ResultPage;
 
-import org.apache.lucene.store.LockObtainFailedException;
+import jakarta.inject.Inject;
+import jakarta.inject.Provider;
+import jakarta.inject.Singleton;
 
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Collections;
@@ -55,9 +63,6 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Lock;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import javax.inject.Inject;
-import javax.inject.Provider;
-import javax.inject.Singleton;
 
 @Singleton
 public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
@@ -78,6 +83,7 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
     private final TaskContextFactory taskContextFactory;
     private final SecurityContext securityContext;
     private final PathCreator pathCreator;
+    private final LuceneProviderFactory luceneProviderFactory;
 
     private volatile Settings settings;
 
@@ -90,7 +96,8 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
                                      final IndexShardWriterExecutorProvider executorProvider,
                                      final TaskContextFactory taskContextFactory,
                                      final SecurityContext securityContext,
-                                     final PathCreator pathCreator) {
+                                     final PathCreator pathCreator,
+                                     final LuceneProviderFactory luceneProviderFactory) {
         this.nodeInfo = nodeInfo;
         this.indexShardService = indexShardService;
         this.indexConfigProvider = indexConfigProvider;
@@ -100,6 +107,7 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         this.taskContextFactory = taskContextFactory;
         this.securityContext = securityContext;
         this.pathCreator = pathCreator;
+        this.luceneProviderFactory = luceneProviderFactory;
     }
 
     @Override
@@ -107,7 +115,6 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         return openWritersByShardId.get(indexShardId);
     }
 
-    @Override
     public IndexShardWriter getWriterByShardKey(final IndexShardKey indexShardKey) {
         return openWritersByShardKey.compute(indexShardKey, (k, v) -> {
             // If there is already a value in this map for the provided key just return the value.
@@ -205,13 +212,12 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         indexShardManager.setStatus(indexShardId, IndexShardStatus.OPENING);
 
         try {
-            final IndexShardWriter indexShardWriter = new IndexShardWriterImpl(indexShardManager,
-                    indexConfigProvider.get(),
+            final LuceneVersion luceneVersion = LuceneVersionUtil.getLuceneVersion(indexShard.getIndexVersion());
+            final LuceneProvider luceneProvider = luceneProviderFactory.get(luceneVersion);
+            final IndexShardWriter indexShardWriter = luceneProvider.createIndexShardWriter(
                     indexStructure,
                     indexShardKey,
-                    indexShard,
-                    ramBufferSizeMB,
-                    pathCreator);
+                    indexShard);
 
             // We have opened the index so update the DB object.
             indexShardManager.setStatus(indexShardId, IndexShardStatus.OPEN);
@@ -223,7 +229,7 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
 
             return indexShardWriter;
 
-        } catch (final LockObtainFailedException t) {
+        } catch (final UncheckedLockObtainException t) {
             // We expect to get lock exceptions as writers are removed from the open writers cache and closed
             // asynchronously via `removeElementsExceedingTTLandTTI`. If this happens we expect this exception
             // and will return null from this method so that the calling code will create a new shard instead.
@@ -231,7 +237,7 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
             LOGGER.debug(() -> "Error opening " + indexShardId, t);
             LOGGER.trace(t::getMessage, t);
 
-        } catch (final IOException | RuntimeException e) {
+        } catch (final RuntimeException e) {
             // Something unexpected went wrong.
             LOGGER.error(() -> "Setting index shard status to corrupt because (" + e + ")", e);
             indexShardManager.setStatus(indexShardId, IndexShardStatus.CORRUPT);
@@ -265,7 +271,7 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         LOGGER.logDurationIfDebugEnabled(() -> {
             try {
                 final Set<IndexShardWriter> openWriters = new HashSet<>(openWritersByShardKey.values());
-                if (openWriters.size() > 0) {
+                if (!openWriters.isEmpty()) {
                     // Flush all writers.
                     final CountDownLatch countDownLatch = new CountDownLatch(openWriters.size());
                     openWriters.forEach(indexShardWriter -> {
@@ -332,8 +338,8 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
 
             // Close candidates in LRU order.
             final List<IndexShardWriter> lruList = getLeastRecentlyUsedList(candidates);
-            while (overflow > 0 && lruList.size() > 0) {
-                final IndexShardWriter indexShardWriter = lruList.remove(0);
+            while (overflow > 0 && !lruList.isEmpty()) {
+                final IndexShardWriter indexShardWriter = lruList.removeFirst();
                 overflow--;
                 close(indexShardWriter, executorProvider.getAsyncExecutor());
             }
@@ -356,8 +362,8 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         if (overflow > 0) {
             // Get LRU list.
             final List<IndexShardWriter> lruList = getLeastRecentlyUsedList(openWritersByShardKey.values());
-            while (overflow > 0 && lruList.size() > 0) {
-                final IndexShardWriter indexShardWriter = lruList.remove(0);
+            while (overflow > 0 && !lruList.isEmpty()) {
+                final IndexShardWriter indexShardWriter = lruList.removeFirst();
                 overflow--;
                 close(indexShardWriter, executor);
             }
@@ -370,7 +376,6 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
                 .collect(Collectors.toList());
     }
 
-    @Override
     public void close(final IndexShardWriter indexShardWriter) {
         taskContextFactory.current().info(() ->
                 "Closing index shard writer for shard: " + indexShardWriter.getIndexShardId());
@@ -496,7 +501,6 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         });
     }
 
-    @Override
     public synchronized void shutdown() {
         securityContext.asProcessingUser(() -> {
             LOGGER.info(() -> "Index shard writer cache shutdown");
@@ -551,9 +555,33 @@ public class IndexShardWriterCacheImpl implements IndexShardWriterCache {
         try {
             LOGGER.info(() -> "Clearing any lingering locks (" + indexShard + ")");
             final Path dir = IndexShardUtil.getIndexPath(indexShard, pathCreator);
-            LockFactoryFactory.clean(dir);
+            deleteLockFiles(dir);
         } catch (final RuntimeException e) {
             LOGGER.error(e::getMessage, e);
+        }
+    }
+
+    /**
+     * Remove any lingering lock files in an index shard directory. These lock files can be left behind if the JVM
+     * terminates abnormally and need to be removed when the system restarts.
+     *
+     * @param dir The directory to remove lock files from.
+     */
+    @Deprecated // Should no longer be needed if the new ShardLockFactory works ok
+    private void deleteLockFiles(final Path dir) {
+        // Delete any lingering lock files from previous uses of the index shard.
+        if (Files.isDirectory(dir)) {
+            try (final DirectoryStream<Path> stream = Files.newDirectoryStream(dir, "*.lock")) {
+                stream.forEach(file -> {
+                    try {
+                        Files.deleteIfExists(file);
+                    } catch (final IOException e) {
+                        LOGGER.error(e::getMessage, e);
+                    }
+                });
+            } catch (final IOException e) {
+                LOGGER.error(e::getMessage, e);
+            }
         }
     }
 
