@@ -4,8 +4,9 @@ import stroom.index.impl.selection.VolumeConfig;
 import stroom.index.shared.IndexVolume;
 import stroom.index.shared.IndexVolumeGroup;
 import stroom.node.api.NodeInfo;
-import stroom.security.api.ProcessingUserIdentityProvider;
 import stroom.security.api.SecurityContext;
+import stroom.security.api.UserIdentity;
+import stroom.security.api.UserIdentityFactory;
 import stroom.security.shared.PermissionNames;
 import stroom.util.AuditUtil;
 import stroom.util.NextNameGenerator;
@@ -18,6 +19,11 @@ import stroom.util.io.PathCreator;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.logging.LogUtil;
+import stroom.util.shared.Clearable;
+
+import jakarta.inject.Inject;
+import jakarta.inject.Provider;
+import jakarta.inject.Singleton;
 
 import java.io.File;
 import java.io.IOException;
@@ -26,16 +32,13 @@ import java.nio.file.Path;
 import java.util.List;
 import java.util.OptionalLong;
 import java.util.stream.Collectors;
-import javax.inject.Inject;
-import javax.inject.Provider;
-import javax.inject.Singleton;
 
 @Singleton
 @EntityEventHandler(type = IndexVolumeServiceImpl.ENTITY_TYPE, action = {
         EntityAction.UPDATE,
         EntityAction.CREATE,
         EntityAction.DELETE})
-public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
+public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService, Clearable {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(IndexVolumeGroupServiceImpl.class);
 
@@ -43,7 +46,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
     private final IndexVolumeDao indexVolumeDao;
     private final SecurityContext securityContext;
     private final Provider<VolumeConfig> volumeConfigProvider;
-    private final ProcessingUserIdentityProvider processingUserIdentityProvider;
+    private final UserIdentityFactory userIdentityFactory;
     private final PathCreator pathCreator;
     private final NodeInfo nodeInfo;
     private final Provider<EntityEventBus> entityEventBusProvider;
@@ -56,7 +59,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                                        final IndexVolumeDao indexVolumeDao,
                                        final SecurityContext securityContext,
                                        final Provider<VolumeConfig> volumeConfigProvider,
-                                       final ProcessingUserIdentityProvider processingUserIdentityProvider,
+                                       final UserIdentityFactory userIdentityFactory,
                                        final PathCreator pathCreator,
                                        final NodeInfo nodeInfo,
                                        final Provider<EntityEventBus> entityEventBusProvider) {
@@ -64,7 +67,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
         this.indexVolumeDao = indexVolumeDao;
         this.securityContext = securityContext;
         this.volumeConfigProvider = volumeConfigProvider;
-        this.processingUserIdentityProvider = processingUserIdentityProvider;
+        this.userIdentityFactory = userIdentityFactory;
         this.pathCreator = pathCreator;
         this.nodeInfo = nodeInfo;
         this.entityEventBusProvider = entityEventBusProvider;
@@ -88,7 +91,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
         ensureDefaultVolumes();
         final IndexVolumeGroup indexVolumeGroup = new IndexVolumeGroup();
         indexVolumeGroup.setName(name);
-        AuditUtil.stamp(securityContext.getUserId(), indexVolumeGroup);
+        AuditUtil.stamp(securityContext, indexVolumeGroup);
         final IndexVolumeGroup result = securityContext.secureResult(PermissionNames.MANAGE_VOLUMES_PERMISSION,
                 () -> indexVolumeGroupDao.getOrCreate(indexVolumeGroup));
         fireChange(EntityAction.CREATE);
@@ -101,7 +104,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
         final IndexVolumeGroup indexVolumeGroup = new IndexVolumeGroup();
         var newName = NextNameGenerator.getNextName(indexVolumeGroupDao.getNames(), "New group");
         indexVolumeGroup.setName(newName);
-        AuditUtil.stamp(securityContext.getUserId(), indexVolumeGroup);
+        AuditUtil.stamp(securityContext, indexVolumeGroup);
         final IndexVolumeGroup result = securityContext.secureResult(PermissionNames.MANAGE_VOLUMES_PERMISSION,
                 () -> indexVolumeGroupDao.getOrCreate(indexVolumeGroup));
         fireChange(EntityAction.CREATE);
@@ -111,7 +114,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
     @Override
     public IndexVolumeGroup update(final IndexVolumeGroup indexVolumeGroup) {
         ensureDefaultVolumes();
-        AuditUtil.stamp(securityContext.getUserId(), indexVolumeGroup);
+        AuditUtil.stamp(securityContext, indexVolumeGroup);
         final IndexVolumeGroup result = securityContext.secureResult(PermissionNames.MANAGE_VOLUMES_PERMISSION,
                 () -> indexVolumeGroupDao.update(indexVolumeGroup));
         fireChange(EntityAction.UPDATE);
@@ -139,7 +142,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                     var indexVolumesInGroup = indexVolumeDao.getAll().stream()
                             .filter(indexVolume ->
                                     indexVolume.getIndexVolumeGroupId().equals(id))
-                            .collect(Collectors.toList());
+                            .toList();
                     indexVolumesInGroup.forEach(indexVolume ->
                             indexVolumeDao.delete(indexVolume.getId()));
                     indexVolumeGroupDao.delete(id);
@@ -163,10 +166,10 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                     if (isEnabled) {
                         if (volumeConfig.getDefaultIndexVolumeGroupName() != null) {
                             final IndexVolumeGroup indexVolumeGroup = new IndexVolumeGroup();
-                            final String processingUserId = processingUserIdentityProvider.get().getId();
+                            final UserIdentity processingUserIdentity = userIdentityFactory.getServiceUserIdentity();
                             final String groupName = volumeConfig.getDefaultIndexVolumeGroupName();
                             indexVolumeGroup.setName(groupName);
-                            AuditUtil.stamp(processingUserId, indexVolumeGroup);
+                            AuditUtil.stamp(processingUserIdentity, indexVolumeGroup);
 
                             LOGGER.info("Creating default index volume group [{}]", groupName);
                             final IndexVolumeGroup newGroup = indexVolumeGroupDao.getOrCreate(indexVolumeGroup);
@@ -198,10 +201,7 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                                         indexVolume.setBytesLimit(byteLimitOption.orElse(0L));
                                         indexVolume.setNodeName(nodeName);
                                         indexVolume.setPath(resolvedPath.toString());
-                                        indexVolume.setCreateTimeMs(System.currentTimeMillis());
-                                        indexVolume.setUpdateTimeMs(System.currentTimeMillis());
-                                        indexVolume.setCreateUser(processingUserId);
-                                        indexVolume.setUpdateUser(processingUserId);
+                                        AuditUtil.stamp(processingUserIdentity, indexVolume);
 
                                         indexVolumeDao.create(indexVolume);
                                     }
@@ -243,7 +243,8 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                     (long) (totalBytes * volumeConfigProvider.get().getDefaultIndexVolumeFilesystemUtilisation()));
         } catch (IOException e) {
             LOGGER.warn(() -> LogUtil.message("Unable to determine the total space on the filesystem for path: {}." +
-                    " Please manually set limit for index volume.", FileUtil.getCanonicalPath(Path.of(path))));
+                    " Please manually set limit for index volume. {}",
+                    FileUtil.getCanonicalPath(Path.of(path)), e.getMessage()));
             return OptionalLong.empty();
         }
     }
@@ -259,5 +260,11 @@ public class IndexVolumeGroupServiceImpl implements IndexVolumeGroupService {
                 LOGGER.error(e::getMessage, e);
             }
         }
+    }
+
+    @Override
+    public void clear() {
+        createdDefaultVolumes = false;
+        creatingDefaultVolumes = false;
     }
 }
